fix sending spinner not clearly visible on sending an image with no caption

--- a/scss/message/_metadata.scss
+++ b/scss/message/_metadata.scss
@@ -24,6 +24,10 @@
         &>.padlock-icon {
             @include color-svg('../images/padlock.svg', white, 125%);
         }
+
+        .status-icon.sending {
+            background-color: white;
+        }
     }
 
     &>.status-icon {
